# auto-class-joiner

./: Cargo.toml  README.md
data/: classes.json  links.json  timings.json
src/: lib.rs  main.rs
